# zkeller89.github.io

./: .env  .gitignore  CNAME  DI_Proposal.Rmd  DI_Proposal.html  README.md  _config.yml  about.markdown  kill-port.sh  lint.sh  package-lock.json  package.json  pyproject.toml  start-backend.sh  start-dev.sh  start-frontend.sh
_includes/: footer.html  head.html  social.html
_layouts/: post.html
_posts/: 2022-09-06-hello-world.markdown  2022-09-06-welcome-to-jekyll.markdown  2022-10-02-dtc-ml-zoomcamp-pt1.markdown  2022-10-02-dtc-ml-zoomcampt-pt1.markdown  2022-12-26-dtc-ml-zoomcamp-pt2.markdown
assets/: main.scss
backend/: app.py
frontend/: package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/public/assets/: README.md
frontend/src/: App.css  App.tsx  index.tsx
frontend/src/components/: About.css  About.tsx  Contact.css  Contact.tsx  Footer.css  Footer.tsx  Header.css  Header.tsx
frontend/src/types/: index.ts
